# service-rag

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/: create_github_env.py
.github/workflows/: docker-build-push.yml  docker-publish.yml  helm-deploy.yml  increment-semver.yml  test-increment-semver.yml
app/: main.py
app/api/: api.py
app/core/: config.py
app/rag/: rag.py
app/schemas/: query.py
app/service/: rag.py
app/tests/: test_api.py
env/: .env.dist
helm/rag-service/: Chart.yaml  values.dist.yaml  values.yaml.dist
helm/rag-service/templates/: NOTES.txt  _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/service-rag/: Chart.yaml  values.dist.yaml
helm/service-rag/templates/: NOTES.txt  _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/service-rag/templates/tests/: test-connection.yaml
