[tool.poetry]
name = "service-rag"
version = "0.0.1"
description = "A Retrieval Augmented Generation Service in FastAPI"
authors = ["tomislav.hasan"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.23.2"
websockets = "11.0.3"
fastapi = "0.103.2"
python-multipart = "0.0.6"
pydantic = {extras = ["email"], version = "2.4.2"}
pydantic-settings = "2.0.3"
tenacity = "8.2.3"
greenlet = "1.1.3"

langchain = "0.0.306"
weaviate-client = "3.25.1"
openai = "0.28.1"
tiktoken = "0.5.1"
boto3 = "1.28.73"
unstructured = {extras = ["pdf"], version = "0.10.27"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
black = "23.9.1"
flake8-pyproject = "1.2.3"
pre-commit = "3.4.0"
pytest = "7.4.3"
httpx = "0.25.0"
pynacl = "1.5.0"
python-dotenv = "1.0.0"

[tool.flake8]
max-line-length = 100
exclude = ['.git','__pycache__','__init__.py','.mypy_cache','.pytest_cache', '.venv']

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = [
  "."
]